# reflex_public

./: .gitignore  AGENTS.md  BREAKING_CHANGES.md  CMakeLists.txt  EULA.txt  LICENSE.txt  README.md  RELEASE_NOTES.md  START.html  THIRD_PARTY_NOTICES.txt  install.bat  install.command  install.ps1  reflex  reflex.bat  version.txt
agents/: reflex_cpp.md  (+1 more)
examples/Drag & Drop Demo/: CMakeLists.txt  resources.xml
examples/Drag & Drop Demo/code/: app.cpp  app.h  entry.cpp  resources.cpp  resources.h  view.cpp  view.h
examples/Drag & Drop Demo/project/macos/: paths.xcconfig
examples/Drag & Drop Demo/project/macos/Drag & Drop Demo.xcodeproj/: project.pbxproj
examples/Drag & Drop Demo/project/macos/Drag & Drop Demo.xcodeproj/xcshareddata/xcschemes/: App.xcscheme  Build.xcscheme
examples/Drag & Drop Demo/project/win/: Build.bat
examples/Drag & Drop Demo/project/win/vcxproj/: App.vcxproj  Common.props
examples/Drag & Drop Demo/resources/: styles.glx
examples/Drag and Drop/: .gitignore  CMakeLists.txt  resources.xml
examples/Drag and Drop/code/: app.cpp  app.h  entry.cpp  resources.cpp  resources.h  view.cpp  view.h
examples/Drag and Drop/project/macos/: Build.command  app.plist
examples/Drag and Drop/project/macos/Drag and Drop.xcodeproj/: project.pbxproj
examples/Drag and Drop/project/macos/Drag and Drop.xcodeproj/xcshareddata/xcschemes/: App.xcscheme  Build.xcscheme
examples/Drag and Drop/project/win/: Build.bat
examples/Drag and Drop/project/win/vcxproj/: Paths.props
examples/Drag and Drop/resources/: styles.glx
examples/SVG Demo/: CMakeLists.txt  resources.xml
examples/SVG Demo/code/: app.cpp  app.h  entry.cpp  resources.cpp  resources.h  view.cpp  view.h
examples/SVG Demo/project/macos/: app.plist
examples/SVG Demo/project/macos/SVG Demo.xcodeproj/: project.pbxproj
examples/SVG Demo/project/macos/SVG Demo.xcodeproj/xcshareddata/xcschemes/: App.xcscheme  Build.xcscheme
examples/SVG Demo/project/win/: Build.bat
examples/SVG Demo/project/win/vcxproj/: Common.props
examples/SVG Demo/resources/: styles.glx
templates/cpp_app/: .gitignore  CMakeLists.txt  install.cfg  resources.xml
templates/cpp_app/code/: _RESOURCES-H_  app.cpp  app.h  resources.cpp  resources.h  view.cpp  view.h
templates/cpp_app/project/android/app/: CMakeLists.txt  build.gradle
templates/cpp_app/project/android/app/src/main/: AndroidManifest.xml
templates/cpp_app/project/android/app/src/main/res/drawable/: ic_launcher_monochrome.xml
templates/cpp_app/project/android/app/src/main/res/values/: strings.xml
templates/cpp_app/project/ios/_PRODUCT-NAME_ (iOS).xcodeproj/: project.pbxproj
templates/cpp_app/project/macos/_PRODUCT-NAME_.xcodeproj/: project.pbxproj
templates/cpp_app/project/macos/_PRODUCT-NAME_.xcodeproj/xcshareddata/xcschemes/: App.xcscheme
templates/cpp_app/project/win/: .gitignore
templates/cpp_app/projects/android/: .gitignore  _ANDROID-LOCAL_.properties
templates/cpp_app/projects/android/app/: build.gradle
templates/cpp_app/projects/android/gradle/wrapper/: gradle-wrapper.properties
templates/cpp_app/projects/ios/: Build.command
templates/cpp_app/projects/ios/Base.lproj/: Main.storyboard
templates/cpp_app/projects/ios/_PRODUCT-NAME_ (iOS).xcodeproj/: project.pbxproj
templates/cpp_app/projects/win/vcxproj/: App.vcxproj.filters
templates/cpp_app/resources/: styles.glx
templates/cpp_audioplugin/: .gitignore  CMakeLists.txt  install.cfg  resources.xml
templates/cpp_audioplugin/code/: instance.cpp  instance.h  resources.cpp  view.cpp  view.h
templates/cpp_audioplugin/project/android/app/: CMakeLists.txt  build.gradle
templates/cpp_audioplugin/project/android/app/src/main/: AndroidManifest.xml
templates/cpp_audioplugin/project/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
templates/cpp_audioplugin/project/ios/: _XCODE-PATHS_.xcconfig
templates/cpp_audioplugin/project/ios/_PRODUCT-NAME_ (iOS).xcodeproj/: project.pbxproj
templates/cpp_audioplugin/project/macos/_PRODUCT-NAME_.xcodeproj/: project.pbxproj
templates/cpp_audioplugin/project/macos/_PRODUCT-NAME_.xcodeproj/xcshareddata/xcschemes/: Build.xcscheme
templates/cpp_audioplugin/project/win/: _PRODUCT-NAME_.sln
templates/cpp_audioplugin/project/win/vcxproj/: VST3.vcxproj
templates/cpp_audioplugin/projects/android/app/src/main/res/values-night/: themes.xml
templates/cpp_audioplugin/projects/android/gradle/: libs.versions.toml
templates/cpp_audioplugin/projects/ios/_PRODUCT-NAME_ (iOS).xcodeproj/: project.pbxproj
templates/cpp_audioplugin/projects/macos/_PRODUCT-NAME_.xcodeproj/xcshareddata/xcschemes/: App.xcscheme  Build.xcscheme
templates/cpp_audioplugin/projects/win/vcxproj/: App.vcxproj  App.vcxproj.filters  Paths.props.RENAME
templates/cpp_audioplugin/resources/: styles.glx
templates/cpp_console_app/: .gitignore  CMakeLists.txt  install.cfg
templates/cpp_console_app/code/: main.cpp
templates/cpp_console_app/project/macos/: .gitignore
templates/cpp_console_app/project/macos/_PRODUCT-NAME_.xcodeproj/: project.pbxproj
templates/cpp_console_app/project/macos/_PRODUCT-NAME_.xcodeproj/xcshareddata/xcschemes/: App.xcscheme
templates/cpp_console_app/projects/win/: _PRODUCT-NAME_.sln
templates/cpp_console_app/projects/win/vcxproj/: _PRODUCT-NAME_.vcxproj
templates/vm_app/: CMakeLists.txt  install.cfg
templates/vm_app/code/: entry.cpp  resources.cpp  resources.h
templates/vm_app/project/android/: open.bat  settings.gradle
templates/vm_app/project/android/app/: CMakeLists.txt
templates/vm_app/project/ios/_PRODUCT-NAME_ (iOS).xcodeproj/: project.pbxproj
templates/vm_app/project/ios/_PRODUCT-NAME_ (iOS).xcodeproj/xcshareddata/xcschemes/: App.xcscheme
templates/vm_app/project/macos/: Build.command
templates/vm_app/project/macos/_PRODUCT-NAME_.xcodeproj/: project.pbxproj
templates/vm_app/project/macos/_PRODUCT-NAME_.xcodeproj/xcshareddata/xcschemes/: Build.xcscheme
templates/vm_app/project/win/: _PRODUCT-NAME_.sln
templates/vm_app/project/win/vcxproj/: App.vcxproj.filters
templates/vm_app/resources/: interface.h
(+1286 files in other folders)
